--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     }
   </style>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-  <script src="./dist/Valine.min.js"></script>
+  <script src="./dist/valine-ex.min.js"></script>
 </head>
 
 <body>
